--- a/src/components/Formulario.css
+++ b/src/components/Formulario.css
@@ -3,8 +3,14 @@
     width: 100;
     top: 0;
     left: 0;
+    z-index: 100;
+    display: block;
     justify-content: center;
+    padding: 15px 20px;
+    margin: 0px 20px 0px 20px;
     border: #4a464363 1px solid;
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .primer-bloque {
@@ -34,7 +40,6 @@
     border: #4a464363 1px solid;
     background-color: #e5e0da;
     display: flex;
-    flex-direction: row;
     padding: 8px 15px 8px 15px;
     margin: 10px 20px 0px 20px;
 }
@@ -43,17 +48,178 @@
     width: 100;
     border: #4a464363 1px solid;
     background-color: #f3f0ec;
+    margin: 0px 20px 0px 20px;
     display: flex;
-    align-items: left;
-    justify-content: space-around;
-    padding: 8px 15px 8px 15px;
-    margin: 0px 20px 10px 20px;
+    flex-wrap: nowrap;
 }
 
+.titulo-victima {
+    width: 70%;
+    justify-content: center;
+    align-self: center;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;    
+    text-align: center;
+    border-right: #2c2a2963 1px solid;
+}
 
+.titulo-relacion {
+    width: 30%;
+    justify-content: center;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;
+    margin: 5px;
+    text-align: center;
+}
+
+.nombre-victima  {
+    height: 100;
+    width: 63%;
+    justify-content: center;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;
+    margin: 2px;
+    text-align: center;
+    padding: 5px;
+}
+
+.relacion-victima {
+    width: 30%;
+    justify-content: right;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;
+    margin: 2px;
+    margin-left: 13px;
+    text-align: center;
+    padding: 5px;
+}
 
 .add { 
-    border-radius: 10px;
+    width: 5%;
+    font-size: 20px;
     background-color: #e5e0da;
-    padding: 10px 10px;
+    border: none;
+    animation-duration: 2s;
+}
+
+.add:hover {
+    background-color: #f3f0ec;
+    font-size: 24px;
+}
+
+.titulo-identificacion {
+    width: 100%;
+    justify-content: center;
+    align-self: center;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;    
+    text-align: center;
+}
+
+.bloque-identificacion {
+    width: 97.2vw;
+    border: #4a464363 1px solid;
+    background-color: #f3f0ec;
+    margin: 0px 20px 0px 20px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-self: center;
+    margin: 0px 0px 10px 0px;
+}
+
+.identificion {
+    font-size: 15px;
+    text-align: center;
+    background-color: #e5e0da;
+    border: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    transition: transform .1s;
+    margin: 10px 0px 10px;
+    padding: 10px;
+}
+
+.identificion:hover {
+    transform: scale(1.005);
+}
+
+.adju-id {
+    width: 5%;
+    font-size: 15px;
+    margin: 10px 0px 10px;
+    padding: 10px;
+    background-color: #e5e0da;
+    border: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: transform .1s;
+}
+
+.adju-id:hover {
+    background-color: #f3f0ec;
+    transform: scale(1.005);
+}
+
+.bloque-ubicacion{
+    width: 97%;
+    border: #4a464363 1px solid;
+    background-color: #f3f0ec;
+    margin: 0px 20px 0px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
+    margin: 10px 20px 10px 20px;
+    padding: 7px;
+}
+
+.data-place {
+    font-size: 15px;
+    text-align: center;
+    background-color: #e5e0da;
+    border: none;
+    transition: transform .1s;
+    margin: 10px 0px 10px;
+    padding: 10px;
+    border-right: #2c2a2963 1px solid;
+}
+
+.titulo-relato {
+    width: 100%;
+    justify-content: center;
+    align-self: center;
+    color: #000000;
+    font-size: 15px;
+    font-weight: 300;    
+    text-align: center;
+}
+
+.bloque-relato {
+    width: 97%;
+    border: #4a464363 1px solid;
+    background-color: #f3f0ec;
+    margin: 0px 20px 0px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
+    margin: 10px 20px 10px 20px;
+}
+
+.relato {
+    font-size: 15px;
+    text-align: center;
+    background-color: #e5e0da;
+    border: none;
+    transition: transform .1s;
+    margin: 10px 0px 10px;
+    padding: 10px;
+    width: 98%;
+    border-radius: 10px;
 }
