--- a/src/components/topbar.css
+++ b/src/components/topbar.css
@@ -10,9 +10,11 @@
     padding: 15px 20px;
     margin: 10px 20px 0px 20px;
     box-sizing: border-box;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
-.sub-topbar {
+.sub-topbar1 {
     background-color: #e5e0da;
     width: 100;
     top: 0;
@@ -24,6 +26,9 @@
     margin: 0px 20px 10px 20px;
     border: #4a464363 1px solid;
     box-sizing: border-box;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    
 }
 
 h3 {
